--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "better-minecraft-help-docs",
   "description": "A Minecraft help docs",
   "version": "2.0.0",
-  "license": "MIT",
+  "license": "CC BY-NC-SA 4.0",
   "type": "module",
   "scripts": {
     "docs:build": "vuepress-vite build src",
